# pyaedt_library

./: .gitignore  pyproject.toml  requirements.txt  setup.py  test.ipynb
example/MFT_1kHz_1MW/: parameter_manager_example.py  test_simulation.ipynb
example/MFT_1kHz_1MW/module/: input_parameter.py  modeling.py  report.py
example/MFT_Maxwell_Icepak/: controller.py  icepak_calculator.csv  input_parameter.py  maxwell_calculator.csv  maxwell_magnetic.csv  modeling.py  run.ipynb  run_simulation.py  simulation1.sh  simulation2.sh  subprocess_run.py
example/MFT_Maxwell_Icepak/data/: data_preprocessing.ipynb
example/MFT_Maxwell_Icepak/module/: input_parameter.py  modeling.py  report.py
example/MFT_TAB/: calc.ipynb  controller.py  couter.ipynb  run.ipynb  run_simulation.py  simulation_results2.csv  subprocess_run.py
example/MFT_TAB/module/: input_parameter.py  modeling.py  report.py
example/MFT_TAB_natrual_convection/: run.ipynb  run_simulation.py  simulation1.sh
example/MFT_TAB_natrual_convection/module/: input_parameter.py  modeling.py  report.py
example/MFT_TAB_natural_convection_v2/: controller.py  run.ipynb  simulation2.sh  subprocess_run.py
example/Uniform_field_WPT_coil/: run.ipynb  run_simulation.py
example/input_test/: bounds.json  test.ipynb
pyaedt_library/: excitation.py  material.py  meshing.py  model3D.py  project.py  result.py  variable.py
src/learning_module/: __init__.py
src/module/: parameter_manager.py
src/pyaedt_module/: __init__.py
src/pyaedt_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+25 files in other folders)
